fixed spacing on cards

--- a/css/style.css
+++ b/css/style.css
@@ -52,8 +52,8 @@ img {
   margin-top: 40px;
   object-fit: cover;
   object-position: 100% 0;
-  width: 200px;
-  height: 200px;
+  width: 250px;
+  height: 250px;
   border-radius: 4px;
   border-style: solid;
   border-width: 2px;
